[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "promptocyte"
version = "0.1.0"
description = "Local-first prompt injection and adversarial prompt firewall."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Promptocyte" }]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/Kaiyin-412/Promptocyte"
Repository = "https://github.com/Kaiyin-412/Promptocyte"
Issues = "https://github.com/Kaiyin-412/Promptocyte/issues"

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30"]
ml = ["torch>=2.4", "transformers>=4.46"]
all = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "torch>=2.4", "transformers>=4.46"]
dev = ["pytest>=8.0", "httpx>=0.27", "fastapi>=0.115"]

[project.scripts]
promptocyte = "promptocyte.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["promptocyte"]

[tool.hatch.build.targets.wheel.force-include]
"promptocyte/config/default.yaml" = "promptocyte/config/default.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
